# ruatom

./: .gitignore  Cargo.toml  LICENSE  README.en.md  README.md
benches/: bench.rs
graph/: Cargo.toml
graph/src/: error.rs  graph.rs  lib.rs
graph/tests/: graph.rs
molecule/: Cargo.toml
molecule/src/: atom.rs  configuration.rs  element.rs  error.rs  lib.rs  molecule.rs  topology.rs
molecule/tests/: molecule.rs
parser/: Cargo.toml
parser/src/: char_buff.rs  error.rs  lib.rs  parser.rs
parser/tests/: charbuf.rs  parser.rs
src/: char_buff.rs  error.rs  lib.rs  parser.rs
src/canon/: mod.rs
src/graph/: edge.rs  graph.rs  mod.rs  vertices.rs
src/molecule/: atom.rs  bond.rs  canon.rs  configuration.rs  element.rs  mod.rs  molecule.rs  topology.rs  transform.rs
tests/: charbuf.rs  graph.rs  molecule.rs  parser.rs  transform.rs
