[package]
name = "ruatom"
version = "0.1.0"
edition = "2021"
authors = ["Ban Mengtao <jiuxie@outlook.com>"]
keywords = ["rust", "cheminfo"]
description = "Chemical information tools."
license = "MIT"
repository = "https://github.com/goldwind-ting/ruatom"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = "0.12.0"
thiserror = "1.0.30"
phf = { version = "0.10.1", features = ["macros"] }
rayon = "1.5.3"
primitive-types = "0.11.1"


[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false